@@ -1,3 +1,7 @@
+2007-02-09  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/dateentry.py (_DateEntryPopup.popup): Filter out ValueUnset.
+
 2007-02-08  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/objectlist.py (ObjectList._treeview_search_equal_func): 
